<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/toolbarDetails_edit"
        android:checkable="false"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/btn_edit"
        android:visible="true"
        app:showAsAction="always" />
</menu>