<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/toolbarMain_delAll"
        android:checkable="false"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/nav_delAll"
        app:showAsAction="never" />

    <item
        android:id="@+id/toolbarMain_addNew"
        android:checkable="false"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/nav_addNew"
        app:showAsAction="ifRoom" />

</menu>
