<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.github.stekeblad.mynotesapp.main.MainActivity"
    tools:showIn="@layout/activity_main">

    <ListView
        android:id="@+id/NotesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:longClickable="true" />
</android.support.constraint.ConstraintLayout>
